--- a/src/AppBundle/Resources/views/User/users.html.twig
+++ b/src/AppBundle/Resources/views/User/users.html.twig
@@ -5,6 +5,228 @@
 	
 {% endblock %}
 {% block content %}
+	<section class="pt--80 pb--20" style="transform: none;">
+		 <div class="container" style="transform: none;">
+		 	 <div class="row" style="transform: none;">
+		 	 	<div class="main--content col-md-8 pb--60" data-trigger="stickyScroll" style="position: relative; overflow: visible; box-sizing: border-box; min-height: 1px;">
+
+	                <div class="theiaStickySidebar" style="padding-top: 0px; padding-bottom: 1px; position: static; transform: none; top: 0px; left: 104.5px;">
+		                <div class="main--content-inner">
+		                	<!-- Miembresos -->
+		                	<div class="filter--nav pb--30 clearfix">
+                                <div class="filter--link float--left">
+                                    <h2 class="h4">Miembros : {{ pagination.getTotalItemCount }}</h2>
+                                </div>
+		                  </div>
+		                   <!-- usuario -->
+		                   <div class="member--items">
+                                <div class="row gutter--15 AdjustRow box-users" style="position: relative; height: 603px;">
+
+                         {% set left = "0px" %}
+                         {% set top = "opx" %}
+                         {% set vertical = 0 %}
+                         {% set cont = 0 %}
+                         {% set sum = 0 %}
+                         {% set strinpx = "px" %}
+                         {% for user in pagination %}
+
+
+                          {% set counter = ( counter | default(0) ) + 1 %} <!-- contador -->
+
+
+					       {% if counter == 1 %}
+					       	{% set left = "0px" %}
+					       {% endif %}
+
+					       {% if counter == 2 %}
+					       	{% set left = "191px" %}
+					       {% endif %}
+
+					       {% if counter == 3 %}
+					       	{% set left = "382px" %}
+					       {% endif %}
+
+					       {% if counter == 4 %}
+					       	{% set left = "573px" %}
+					       		{% set counter = 0 %}
+					       	    {% set vertical = ( vertical | default(0) ) + 1 %} <!-- contador -->
+					       	    {% set cont = ( cont | default(0) ) + 1 %} <!-- contador -->
+					       {% endif %}
+
+					       {% if counter == 1  and vertical == cont %}
+					       	    {% set sum = 201 * vertical %}
+					       	    {{ sum ~ strinpx|lower }}
+					       	    {% set top = sum ~ strinpx   %}
+					       	    {{top}}
+					       {% endif %}
+
+                                    <div class="col-md-3 col-xs-6 col-xxs-12 user-item" style="position: absolute; left: {{left}}; top: {{top}} ;">
+                                        <!-- Member Item Start -->
+                             
+
+                                        <div class="member--item online">
+                                            <div class="img img-circle">
+                                                <a href="member-activity-personal.html" class="btn-link">
+				                             {% if user.image == null %}
+				                                <img src="{{ asset('assets/images/default.png')}}" />
+				                             {% else %}
+				                                <img src="{{ asset('uploads/users/'~user.image)}}" />
+				                             {% endif %}
+                                                </a>
+                                            </div>
+
+                                            <div class="name">
+                                                <h3 class="h6 fs--12">
+                                                    <a href="member-activity-personal.html" class="btn-link">{{ user.name }}</a>
+                                                </h3>
+                                            </div>
+
+                                            <div class="activity">
+                                                <p><ion-icon name="time" class="fa mr--8"></ion-icon>{{ user.surname }} - {{ user.nick }}</p>
+                                            </div>
+                                           
+                                            <div class="actions icons-user">
+                                                <ul class="nav">
+                                                    <li>
+                                                        <a href="#" title="" class="btn-link" data-toggle="tooltip" data-placement="bottom" data-original-title="Send Message">
+                                                           <ion-icon name="filing"></ion-icon>
+                                                        </a>
+                                                    </li>
+                                                    {% if app.user.id != user.id %}
+                                                    <li  class="buttons-following">
+                                                    			<a  title="" class="btn-follow
+                                                    			{% if app.user|following(user) == true %}
+										                                            hidden
+										                            {% endif %}" 
+										                         data-followed="{{user.id}}">
+                                                                <ion-icon name="person-add"></ion-icon>
+                                                                </a>
+
+                                                                <a  title="" class="btn-unfollow
+                                                                {% if app.user|following(user) == false %}
+										                                         hidden   
+										                            {% endif %}" 
+										                         data-followed="{{user.id}}">
+                                                                <ion-icon name="close-circle"></ion-icon>
+                                                                </a>
+                                                    </li>
+                                                     {% endif %}
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        
+                                        <!-- Member Item End -->
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                                <div class="navigation">
+									{{ knp_pagination_render(pagination) }}
+								</div>
+                            </div>
+
+                            <!-- Page Count Start -->
+                            <div class="page--count pt--30">
+                                <label class="ff--primary fs--14 fw--500 text-darker">
+                                    <span>Viewing</span>
+                                    <span>of 2,500</span>
+                                </label>
+                            </div>
+                            <!-- Page Count End -->
+                        </div></div></div>
+                    <!-- Main Content End -->
+
+                    <!-- Main Sidebar Start -->
+                    <div class="main--sidebar col-md-4 pb--60" data-trigger="stickyScroll" style="position: relative; overflow: visible; box-sizing: border-box; min-height: 1px;">
+
+                    <div class="theiaStickySidebar" style="padding-top: 0px; padding-bottom: 1px; position: static; transform: none; left: 884.5px; top: 0px;">
+
+                    	<div class="widget">
+
+                            <h2 class="h4 fw--700 widget--title">Que esta pasando?</h2>
+
+                            <!-- Buddy Finder Widget Start -->
+                            <div class="buddy-finder--widget">
+                                <form action="#">
+                                    <div class="row">
+                                        <div class="col-xs-6 col-xxs-12">
+                                            <div class="form-group">
+                                                <label>
+                                                    <p>Busca informacion</p>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <form action="{{ path('user_search') }}" class="form-inline my-2 my-lg-0">
+	                                    <div class="row">
+	                                        <div class="col-xs-8">
+	                                     		<input class="form-control mr-sm-2" type="text" placeholder="Search" name="search">
+	                                    </div>
+	                                     <div class="col-xs-4">
+							                    <button class="btn btn-secondary my-1 my-sm-0" type="submit">Search</button>        
+							               </div>		
+	                                     </div>
+	                                </form>    
+                                </form>
+                            </div>
+                            <!-- Buddy Finder Widget End -->
+                        </div>
+                        <div class="widget">
+                            <h2 class="h4 fw--700 widget--title">Noticias</h2>
+
+                            <!-- Text Widget Start -->
+                            <div class="text--widget">
+                                <p>Aplasar PAES que tan divertido es</p>
+                            </div>
+                            <!-- Text Widget End -->
+                        </div>
+                        <div class="widget">
+                            <h2 class="h4 fw--700 widget--title">Estudia</h2>
+
+                            <!-- Links Widget Start -->
+                            <div class="links--widget">
+                                <ul class="nav">
+                                    <li><a href="sub-forums.html">User Interface Design<span>(12)</span></a></li>
+                                    <li><a href="sub-forums.html">Front-End Engineering<span>(07)</span></a></li>
+                                    <li><a href="sub-forums.html">Web Development<span>(37)</span></a></li>
+                                    <li><a href="sub-forums.html">Social Media Marketing<span>(13)</span></a></li>
+                                    <li><a href="sub-forums.html">Content Marketing<span>(28)</span></a></li>
+                                </ul>
+                            </div>
+                            <!-- Links Widget End -->
+                        </div>
+                        <div class="widget">
+                            <h2 class="h4 fw--700 widget--title">Archives</h2>
+
+                            <!-- Nav Widget Start -->
+                            <div class="nav--widget">
+                                <ul class="nav">
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-calendar-o"></i>
+                                            <span>Tarea :</span>
+                                            <span class="text">Jan - July 2017</span>
+                                            <span class="count">(86)</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- Nav Widget End -->
+                        </div>
+                        <div class="widget">
+                            <h2 class="h4 fw--700 widget--title">Advertisements</h2>
+
+                            <!-- Ad Widget Start -->
+                            <div class="ad--widget">
+                                <iframe width="360" height="215" src="https://www.youtube.com/embed/1-R-4Du2hH8?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
+                            <!-- Ad Widget End -->
+                        </div></div></div>
+                      </div>
+		 	    </div>
+		 </div>
+	</section>
+
+		
 	<div class="container">
 		<div class="col-lg-12 box-form">
 			<h1>Gente</h1>
@@ -21,7 +243,7 @@
 						{%if user.image == null %}
                                 <img src="{{ asset('assets/images/default.png')}}" />
                             {%else%}
-                               <img src="{{ asset('uploads/users/'~user.image)}}" />
+                                <img src="{{ asset('uploads/users/'~user.image)}}" />
                          {%endif%}
 					</div>
 					<div class="user-item-content">
