--- a/src/AppBundle/Resources/views/publication/home.html.twig
+++ b/src/AppBundle/Resources/views/publication/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle:layouts:layout.html.twig' %}
 {% block content %}
 	<div class="container">
-		<h1>Bien</h1>
+        <p>Welcome</p>
 	</div>
 {% endblock %}
