--- a/src/AppBundle/Resources/views/publication/home.html.twig
+++ b/src/AppBundle/Resources/views/publication/home.html.twig
@@ -92,7 +92,7 @@
                             <div class="col-lg-6 col-md-8 no-pd">
                                 <div class="main-ws-sec">
                                     <div class="post-topbar">             
-                                        <div class="user-picy ml-5">
+                                        <div class="user-picy ">
                                              <img src="{{ asset('uploads/users/'~app.user.image)}}" />
                                          <div class="post mt-4">
                                            <h4>Crear tu publicación</h4>
@@ -100,7 +100,7 @@
                                         </div>
                                         <div class="post-st">
                                             <ul>
-                                                <li class="mr-5">
+                                                <li class="">
                                                 {{ form_start (form,{action:'','method':'POST'}) }}
                                                 {{ form_end (form)}}
                                                </li>
